force-app/main/default/objects/review__c/review__c.object-meta.xml
<CustomObject>
    <label>review</label>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>