force-app/main/default/objects/review__c/fields/assesment__c.field-meta.xml
<CustomField>
    <fullName>assesment__c</fullName>
    <label>assesment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>