force-app/main/default/objects/review__c/fields/candidate__c.field-meta.xml
<CustomField>
    <fullName>candidate__c</fullName>
    <formula>HYPERLINK( job_application__r.candidate__r.Id , job_application__r.candidate__r.first_name__c   &amp;  &quot; &quot;  &amp;  job_application__r.candidate__r.last_name__c  )</formula>
    <label>candidate</label>
    <type>Text</type>
</CustomField>